--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Особистий щоденник завдань</title>
 </head>
-<body>
+<body bgcolor="#f5f5dc" link="#663399" vlink="#b22222" alink="#ffc0cb">
 <header>
-    <a href="index.html">Головна</a>
+    <a href="" style="color: red">Головна</a>
     <a href="tasks.html">Завдання</a>
     <a href="schedule.html">Розклад</a>
     <a href="about.html">Про сайт</a>
@@ -17,6 +17,84 @@
 
 <main>
     <h1>Ласкаво просимо!</h1>
+    <p id="info">
+        <font color="purple" size="3" face="Georgia">
+            <i>Це сторінка щоденника справ.</i>
+        </font>
+    </p>
+    <p id="intro-text" align="right">
+        <font color="green" size="4" face="Verdana">
+            Ви можете додавати завдання, планувати тиждень та переглядати звіти.
+        </font>
+    </p>
+
+    <a href="#images" style="color: cadetblue;">Зображеня</a>
+
+    <a href="#intro-text" style="color: cadetblue; display: block;">Вступний текст</a>
+
+    <a href="img/shrek.png" target="_blank">
+        Шрек
+        <img src="img/shrek.png" alt="Shrek" width="305" height="192" style="display: block;">
+    </a>
+
+    <a href="https://uk.wikipedia.org" target="_blank">
+        Вікіпедія
+    </a>
+
+    <h2>Галерея міст</h2>
+
+    <table border="1" style="border-collapse: collapse; text-align: center; width: 100%;">
+        <caption><strong>Корисні інструменти для розробника</strong></caption>
+
+        <thead style="background-color: #dfefff;">
+        <tr>
+            <th>GitHub</th>
+            <th>Google</th>
+            <th>YouTube</th>
+            <th>VS Code</th>
+        </tr>
+        </thead>
+
+        <tr>
+            <td><img src="img/github.png" width="100" alt="github"></td>
+            <td><img src="img/google.png" width="100" alt="google"></td>
+            <td><img src="img/youtube.png" width="100" alt="youtube"></td>
+            <td><img src="img/vscode.png" width="100" alt="VS code"></td>
+        </tr>
+
+        <tr>
+            <td><a href="https://github.com" target="_blank">github.com</a></td>
+            <td><a href="https://google.com" target="_blank">google.com</a></td>
+            <td><a href="https://youtube.com" target="_blank">youtube.com</a></td>
+            <td><a href="https://code.visualstudio.com/" target="_blank">vscode.com</a></td>
+        </tr>
+
+        <tr>
+            <td>Хостинг коду і репозиторіїв</td>
+            <td>Пошукова система №1</td>
+            <td>Відеохостинг і навчання</td>
+            <td>Редактор коду від Microsoft</td>
+        </tr>
+    </table>
+
+
+    <ul type="square">
+        <li>Підготувати звіт</li>
+        <li>Пройти тест</li>
+    </ul>
+
+    <ol type="I">
+        <li>Ранок</li>
+        <li>Обід</li>
+        <li>Вечір</li>
+    </ol>
+
+    <dl>
+        <dt>HTML</dt>
+        <dd>Мова розмітки гіпертексту</dd>
+        <dt>CSS</dt>
+        <dd>Мова стилів</dd>
+    </dl>
 </main>
 
 </body>
