--- a/about.html
+++ b/about.html
@@ -12,11 +12,22 @@
   <a href="index.html">Головна</a>
   <a href="tasks.html">Завдання</a>
   <a href="schedule.html">Розклад</a>
-  <a href="about.html">Про сайт</a>
+  <a href="">Про сайт</a>
 </header>
 
 <main>
   <p>Для створення цього сайту були використані знання з HTML, CSS, JavaScript.</p>
+  <p><font color="blue" size="4" face="Arial"><b>Проєкт створено студентом</b></font></p>
+  <p><font color="green" size="3" face="Verdana"><i>Про мене</i></font></p>
+  <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5398686.285320095!2d25.90500842345546!3d48.64663664679489!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d1d9c154700e8f%3A0x1068488f64010!2z0KPQutGA0LDQuNC90LA!5e0!3m2!1sru!2sua!4v1748914523386!5m2!1sru!2sua"
+          width="600"
+          height="450"
+          style="border:0;"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
 </main>
 
 </body>
