--- a/tasks.html
+++ b/tasks.html
@@ -10,13 +10,15 @@
 <body>
 <header>
     <a href="index.html">Головна</a>
-    <a href="tasks.html">Завдання</a>
+    <a href="">Завдання</a>
     <a href="schedule.html">Розклад</a>
     <a href="about.html">Про сайт</a>
 </header>
 
 <main>
-    <h1>Мої завдання на сьогодні</h1>
+    <h1>Мої завдання</h1>
+    <p><font color="blue" size="4" face="Arial"><b>Поточні завдання на день</b></font></p>
+    <p><font color="green" size="3" face="Verdana"><i>Завдання дня</i></font></p>
 
     <ul>
         <li>
@@ -32,6 +34,9 @@
             <p>Надіслати домашнє завдання</p>
         </li>
     </ul>
+
+    <a href="index.html#info" style="color: cadetblue;">Інформація</a>
+
 </main>
 
 </body>
