--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Особистий щоденник завдань</title>
 </head>
+<style>
+    #home{
+        color: #333333;
+    }
+</style>
 <body bgcolor="#f5f5dc" link="#663399" vlink="#b22222" alink="#ffc0cb">
 <header>
-    <a href="" style="color: red">Головна</a>
+    <a id="home" href="">Головна</a>
     <a href="tasks.html">Завдання</a>
     <a href="schedule.html">Розклад</a>
     <a href="about.html">Про сайт</a>
@@ -27,7 +32,7 @@
             Ви можете додавати завдання, планувати тиждень та переглядати звіти.
         </font>
     </p>
-
+    <p style="color: firebrick">Дивись нижче</p>
     <a href="#images" style="color: cadetblue;">Зображеня</a>
 
     <a href="#intro-text" style="color: cadetblue; display: block;">Вступний текст</a>
@@ -40,8 +45,6 @@
     <a href="https://uk.wikipedia.org" target="_blank">
         Вікіпедія
     </a>
-
-    <h2>Галерея міст</h2>
 
     <table border="1" style="border-collapse: collapse; text-align: center; width: 100%;">
         <caption><strong>Корисні інструменти для розробника</strong></caption>
