--- a/tasks.html
+++ b/tasks.html
@@ -35,6 +35,19 @@
         </li>
     </ul>
 
+    <div class="task">
+        <h2>Завдання на день</h2>
+        <p><span>Виконати звіт</span> до 18:00</p>
+    </div>
+
+    <ul class="todo-list">
+        <li>Покупки</li>
+        <li>Навчання</li>
+    </ul>
+
+    <strong>Важливо!</strong>
+    <p>Не забудь зробити бекап проєкту!</p>
+
     <a href="index.html#info" style="color: cadetblue;">Інформація</a>
 
 </main>
