--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Особистий щоденник завдань</title>
 </head>
 <style>
-    #home{
+    #home {
         color: #333333;
     }
 </style>
@@ -18,6 +18,7 @@
     <a href="tasks.html">Завдання</a>
     <a href="schedule.html">Розклад</a>
     <a href="about.html">Про сайт</a>
+    <a href="events.html">поїхали</a>
 </header>
 
 <main>
