--- a/schedule.html
+++ b/schedule.html
@@ -1,64 +1,65 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="Kuzmenko Volodymyr">
-  <link rel="stylesheet" href="css/style.css">
-  <title>Розклад</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Kuzmenko Volodymyr">
+    <link rel="stylesheet" href="css/style.css">
+    <title>Розклад</title>
 </head>
 <body>
 <header>
-  <a href="index.html">Головна</a>
-  <a href="tasks.html">Завдання</a>
-  <a href="">Розклад</a>
-  <a href="about.html">Про сайт</a>
+    <a href="index.html">Головна</a>
+    <a href="tasks.html">Завдання</a>
+    <a href="">Розклад</a>
+    <a href="about.html">Про сайт</a>
 </header>
 
 <main>
-  <h1>Розклад</h1>
+    <h1>Розклад</h1>
 
-  <table border="1" cellpadding="10" cellspacing="5" width="100%" style="border-collapse: collapse; text-align: center; ">
-    <caption><strong>Тижневий розклад</strong></caption>
+    <table border="1" cellpadding="10" cellspacing="5" width="100%"
+           style="border-collapse: collapse; text-align: center; ">
+        <caption><strong>Тижневий розклад</strong></caption>
 
-    <colgroup>
-      <col style="background-color: #f0f8ff;">
-      <col span="2" style="background-color: #fff8dc;">
-      <col style="background-color: #f5f5f5;">
-    </colgroup>
+        <colgroup>
+            <col style="background-color: #f0f8ff;">
+            <col span="2" style="background-color: #fff8dc;">
+            <col style="background-color: #f5f5f5;">
+        </colgroup>
 
-    <thead style="background-color: #cceeff;">
-    <tr align="center">
-      <th>День</th>
-      <th>1 пара</th>
-      <th>2 пара</th>
-      <th>Аудиторія</th>
-    </tr>
-    </thead>
+        <thead style="background-color: #cceeff;">
+        <tr align="center">
+            <th>День</th>
+            <th>1 пара</th>
+            <th>2 пара</th>
+            <th>Аудиторія</th>
+        </tr>
+        </thead>
 
-    <tbody>
-    <tr>
-      <td rowspan="2" align="center">Понеділок</td>
-      <td align="left">Математика</td>
-      <td align="center">Інформатика</td>
-      <td align="right">101</td>
-    </tr>
-    <tr>
-      <td colspan="2" align="center">Фізкультура</td>
-      <td align="right">Спортзал</td>
-    </tr>
-    <tr>
-      <td align="center">Вівторок</td>
-      <td>Англійська</td>
-      <td>Історія</td>
-      <td align="right">202</td>
-    </tr>
-    <tr>
-      <td align="center">Середа</td>
-      <td colspan="3" align="center">Самостійна робота</td>
-    </tr>
-    </tbody>
-  </table>
+        <tbody>
+        <tr>
+            <td rowspan="2" align="center">Понеділок</td>
+            <td align="left">Математика</td>
+            <td align="center">Інформатика</td>
+            <td align="right">101</td>
+        </tr>
+        <tr>
+            <td colspan="2" align="center">Фізкультура</td>
+            <td align="right">Спортзал</td>
+        </tr>
+        <tr>
+            <td align="center">Вівторок</td>
+            <td>Англійська</td>
+            <td>Історія</td>
+            <td align="right">202</td>
+        </tr>
+        <tr>
+            <td align="center">Середа</td>
+            <td colspan="3" align="center">Самостійна робота</td>
+        </tr>
+        </tbody>
+    </table>
 </main>
 
 <script src="js/dialog.js"></script>
