--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <a href="schedule.html">Розклад</a>
     <a href="about.html">Про сайт</a>
     <a href="events.html">поїхали</a>
+    <a href="dragdrop.html">Перетягування</a>
 </header>
 
 <main>
@@ -112,16 +113,16 @@
 </main>
 
 <script>
-    alert("Ласкаво просимо до щоденника!");
-
-    let userName = prompt("Як вас звати?", "Гена");
-    let isReady = confirm("Готові працювати зі справами?");
-
-    if (isReady) {
-        alert(`Чудово, ${userName}! Розпочинаємо`);
-    } else {
-        alert("Поверніться, коли будете готові.");
-    }
+    // alert("Ласкаво просимо до щоденника!");
+    //
+    // let userName = prompt("Як вас звати?", "Гена");
+    // let isReady = confirm("Готові працювати зі справами?");
+    //
+    // if (isReady) {
+    //     alert(`Чудово, ${userName}! Розпочинаємо`);
+    // } else {
+    //     alert("Поверніться, коли будете готові.");
+    // }
 
     const links = document.querySelectorAll(".link");
     links.forEach((link) => {
