--- a/schedule.html
+++ b/schedule.html
@@ -40,8 +40,9 @@
         <tbody>
         <tr>
             <td rowspan="2" align="center">Понеділок</td>
-            <td align="left">Математика</td>
-            <td align="center">Інформатика</td>
+            <td rowspan="2" align="left">Математика</td>
+            <td  align="left">Математика</td>
+            <td colspan="2" align="center">Інформатика</td>
             <td align="right">101</td>
         </tr>
         <tr>
